--- a/contatti.html
+++ b/contatti.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>miniutti.it | Contatti</title>
+  <title>tobia.me | Contatti</title>
   <link rel="icon" href="favicon.png" type="image/png" />
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600&display=swap" rel="stylesheet" />
   <style>
@@ -207,7 +207,7 @@
   </form>
 
   <section class="contact-info">
-    <p><strong>Email:</strong> <a href="mailto:tobia@miniutti.it">tobia@miniutti.it</a></p>
+    <p><strong>Email:</strong> <a href="mailto:tobia@miniutti.it">info@tobia.me</a></p>
     <p><strong>Telefono:</strong> <a href="tel:+393791128232">+39 379 112 8232</a></p>
   </section>
 </main>
@@ -228,11 +228,11 @@
   <div class="footer-col">
     <h4>Contatti</h4>
     <ul>
-      <li><a href="mailto:tobia@miniutti.it">Email: tobia@miniutti.it</a></li>
+      <li><a href="mailto:info@tobia.me">Email: info@tobia.me</a></li>
       <li><a href="tel:+393791128232">Tel: +39 379 112 8232</a></li>
     </ul>
   </div>
-  <div class="footer-bottom">© 2025 miniutti.it — Tutti i diritti riservati</div>
+  <div class="footer-bottom">© 2025 tobia.me — Tutti i diritti riservati</div>
 </footer>
 
 <div class="overlay" id="overlay">
