--- a/contatti.html
+++ b/contatti.html
@@ -1,1 +1,292 @@
-qui non c'è nulla.  vai via.
+<!DOCTYPE html>
+<html lang="it">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>tobia.me | Contatti</title>
+  <link rel="icon" href="favicon.png" type="image/png" />
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600&display=swap" rel="stylesheet" />
+  <style>
+    :root {
+      --carbon: #121212;
+      --carbon-deep: #0d0d0d;
+      --golden: #c9a74c;
+      --anthracite: #b3b3b3;
+      --white: #ffffff;
+      --tricolor-start: #008C45;
+      --tricolor-middle: #F4F5F0;
+      --tricolor-end: #CD212A;
+      --transition: 0.3s ease-in-out;
+      --border-radius: 20px;
+      --error-red: #cc4444;
+    }
+
+    * { margin:0; padding:0; box-sizing:border-box; }
+    body { font-family: 'Outfit', sans-serif; background-color: var(--carbon); color: var(--white); -webkit-font-smoothing: antialiased; min-height:100vh; }
+
+    header {
+      backdrop-filter: blur(14px);
+      background: rgba(255 255 255 / 0.05);
+      padding: 1.3rem 2rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      position: sticky;
+      top: 0;
+      z-index: 1100;
+      box-shadow: 0 2px 25px rgba(0,0,0,0.85);
+    }
+
+    .logo { height: 42px; filter: drop-shadow(0 0 1.5px rgba(0,0,0,0.6)); }
+    nav a {
+      position: relative;
+      color: var(--white);
+      text-decoration: none;
+      font-weight: 600;
+      margin-left: 2.5rem;
+      padding-bottom:4px;
+      transition: color var(--transition);
+    }
+    nav a::after {
+      content: "";
+      position: absolute;
+      bottom:0; left:0;
+      width:0; height:3px;
+      background: linear-gradient(90deg,var(--tricolor-start),var(--tricolor-middle),var(--tricolor-end));
+      border-radius:3px 3px 0 0;
+      transition: width var(--transition);
+      pointer-events:none;
+    }
+    nav a:hover::after, nav a:focus-visible::after { width:100%; }
+    nav a:hover, nav a:focus-visible { color: var(--golden); outline:none; }
+
+    main { max-width:720px; margin:4rem auto 5rem; padding:0 2rem; }
+
+    h1 { font-size:3rem; color: var(--golden); margin-bottom:2rem; text-align:center; }
+
+    form {
+      background: var(--carbon-deep);
+      border-radius: var(--border-radius);
+      box-shadow: 0 14px 50px rgba(0,0,0,0.7);
+      padding:2.8rem 3rem;
+      display:flex;
+      flex-direction:column;
+      gap:1.8rem;
+    }
+
+    label { font-weight:600; font-size:1.05rem; color: var(--white); cursor:pointer; }
+    input[type="text"], input[type="email"], textarea {
+      background: var(--carbon);
+      border:2.5px solid var(--anthracite);
+      border-radius:12px;
+      padding:1rem 1.2rem;
+      font-size:1rem;
+      color: var(--white);
+      transition: border-color var(--transition), box-shadow var(--transition);
+      font-family: 'Outfit', sans-serif;
+      resize: vertical;
+    }
+    input:focus, textarea:focus { border-color: var(--golden); box-shadow:0 0 10px var(--golden); outline:none; }
+    textarea { min-height:140px; }
+
+    .error-message { color: var(--error-red); font-size:0.85rem; margin-top:0.2rem; font-weight:600; display:none; }
+    input:invalid:not(:focus):not(:placeholder-shown) + .error-message,
+    textarea:invalid:not(:focus):not(:placeholder-shown) + .error-message { display:block; }
+
+    button {
+      background:transparent;
+      border:2.5px solid var(--golden);
+      border-radius:50px;
+      color:var(--golden);
+      padding:1rem 2.8rem;
+      font-size:1.1rem;
+      font-weight:700;
+      letter-spacing:0.07em;
+      cursor:pointer;
+      align-self:center;
+      transition: background-color var(--transition), color var(--transition), box-shadow var(--transition);
+      box-shadow:0 0 0 rgba(0,0,0,0);
+      will-change: transform;
+    }
+    button:hover, button:focus-visible { background-color: var(--golden); color: var(--carbon); box-shadow: 0 10px 30px rgba(201,167,76,0.7); transform:scale(1.05); outline:2px solid var(--golden); outline-offset:4px; }
+
+    .contact-info {
+      margin-top:3.8rem;
+      background: var(--carbon-deep);
+      border-radius: var(--border-radius);
+      padding:2rem 2.5rem;
+      box-shadow:0 14px 40px rgba(0,0,0,0.6);
+      font-size:1.1rem;
+      color: var(--anthracite);
+      line-height:1.6;
+    }
+    .contact-info strong { color: var(--golden); }
+    .contact-info a { color: var(--golden); text-decoration:none; transition:color var(--transition); }
+    .contact-info a:hover, .contact-info a:focus-visible { color: var(--white); outline:none; }
+
+    footer {
+      background: var(--carbon-deep);
+      padding:3rem 2rem;
+      display:grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap:2rem;
+      border-top:1px solid rgba(255,255,255,0.05);
+    }
+    .footer-col h4 { font-size:1.25rem; margin-bottom:1rem; color: var(--golden); }
+    .footer-col ul { list-style:none; padding-left:0; }
+    .footer-col ul li { margin:0.55rem 0; }
+    .footer-col ul li a { color: var(--anthracite); text-decoration:none; transition:color var(--transition); }
+    .footer-col ul li a:hover, .footer-col ul li a:focus-visible { color: var(--white); outline:none; }
+    .footer-bottom { grid-column:1 / -1; text-align:center; margin-top:2.5rem; font-size:0.9rem; color: var(--anthracite); }
+
+    @media (max-width:768px){
+      nav a { margin-left:1.3rem; font-size:0.95rem; }
+      main { margin:3rem 1.2rem 4rem; padding:0; }
+      form { padding:2.2rem 1.5rem; }
+    }
+
+    /* Animazione overlay */
+    .overlay {
+      position: fixed;
+      top:0; left:0;
+      width:100%; height:100%;
+      background: rgba(0,0,0,0.85);
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      opacity:0;
+      pointer-events:none;
+      transition: opacity 0.5s ease;
+      z-index:2000;
+    }
+    .overlay.active { opacity:1; pointer-events:auto; }
+    .overlay-box {
+      background: var(--carbon-deep);
+      border:2px solid var(--golden);
+      border-radius:20px;
+      padding:2.5rem 3rem;
+      text-align:center;
+      color: var(--white);
+      max-width:400px;
+      box-shadow:0 20px 50px rgba(0,0,0,0.7);
+      transform:scale(0.9);
+      transition: transform 0.4s ease;
+    }
+    .overlay.active .overlay-box { transform:scale(1); }
+    .overlay-box button { margin-top:1.5rem; }
+  </style>
+</head>
+<body>
+
+<header>
+  <a href="index.html"><img src="favicon.png" alt="Logo miniutti.it" class="logo" /></a>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="progetti.html">Progetti</a>
+    <a href="contatti.html" aria-current="page">Contatti</a>
+  </nav>
+</header>
+
+<main>
+  <h1>Contattami</h1>
+
+  <form id="contactForm" novalidate>
+    <label for="nome">Nome e Cognome <span style="color: var(--golden);">*</span></label>
+    <input type="text" id="nome" name="nome" placeholder="Inserisci il tuo nome completo" required />
+    <div class="error-message">Per favore inserisci il tuo nome completo.</div>
+
+    <label for="email">Email <span style="color: var(--golden);">*</span></label>
+    <input type="email" id="email" name="email" placeholder="tua@email.com" required />
+    <div class="error-message">Inserisci una email valida.</div>
+
+    <label for="messaggio">Messaggio <span style="color: var(--golden);">*</span></label>
+    <textarea id="messaggio" name="messaggio" placeholder="Scrivi il tuo messaggio qui..." required></textarea>
+    <div class="error-message">Il messaggio non può essere vuoto.</div>
+
+    <button type="submit">Invia</button>
+  </form>
+
+  <section class="contact-info">
+    <p><strong>Email:</strong> <a href="mailto:tobia@miniutti.it">info@tobia.me</a></p>
+    <p><strong>Telefono:</strong> <a href="tel:+393791128232">+39 379 112 8232</a></p>
+  </section>
+</main>
+
+<footer>
+  <div class="footer-col">
+    <h4>Miniutti.it</h4>
+    <p>Portfolio ufficiale di Tobia Miniutti — progetti, idee e sviluppo.</p>
+  </div>
+  <div class="footer-col">
+    <h4>Link rapidi</h4>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="progetti.html">Progetti</a></li>
+      <li><a href="contatti.html">Contatti</a></li>
+    </ul>
+  </div>
+  <div class="footer-col">
+    <h4>Contatti</h4>
+    <ul>
+      <li><a href="mailto:info@tobia.me">Email: info@tobia.me</a></li>
+      <li><a href="tel:+393791128232">Tel: +39 379 112 8232</a></li>
+    </ul>
+  </div>
+  <div class="footer-bottom">© 2025 tobia.me — Tutti i diritti riservati</div>
+</footer>
+
+<div class="overlay" id="overlay">
+  <div class="overlay-box">
+    <h2>Messaggio inviato con successo!</h2>
+    <p>Ti risponderò il prima possibile.</p>
+    <button onclick="closeOverlay()">Chiudi</button>
+  </div>
+</div>
+
+<script>
+const form = document.getElementById('contactForm');
+const overlay = document.getElementById('overlay');
+
+form.addEventListener('submit', async (e) => {
+  e.preventDefault();
+
+  const isEmailValid = email => /^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(email);
+  let isValid = true;
+
+  const fields = [
+    { input: form.nome, error: form.nome.nextElementSibling, type:'text' },
+    { input: form.email, error: form.email.nextElementSibling, type:'email' },
+    { input: form.messaggio, error: form.messaggio.nextElementSibling, type:'text' }
+  ];
+
+  fields.forEach(f=>{
+    const val=f.input.value.trim();
+    if(!val){
+      f.error.textContent=f.input.name==='messaggio'?'Il messaggio non può essere vuoto.':'Per favore compila questo campo.';
+      f.error.style.display='block'; isValid=false; f.input.focus();
+    } else if(f.type==='email' && !isEmailValid(val)){
+      f.error.textContent='Inserisci una email valida.'; f.error.style.display='block'; isValid=false; f.input.focus();
+    } else { f.error.style.display='none'; }
+  });
+
+  if(!isValid) return;
+
+  const formData = { name: form.nome.value, email: form.email.value, message: form.messaggio.value };
+
+  try {
+    const response = await fetch('https://hook.eu2.make.com/lndbgsb8ujjcwdrrwrpcxuqimnx6tjid', {
+      method:'POST',
+      headers:{'Content-Type':'application/json'},
+      body:JSON.stringify(formData)
+    });
+    if(!response.ok) throw new Error('Errore invio modulo');
+    overlay.classList.add('active');
+    form.reset();
+  } catch(err){ console.error(err); alert('Si è verificato un errore durante l\'invio.'); }
+});
+
+function closeOverlay(){ overlay.classList.remove('active'); }
+</script>
+
+</body>
+</html>
