--- a/index.html
+++ b/index.html
@@ -1,300 +1,1 @@
-<!DOCTYPE html>
-<html lang="it">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>tobia.me | Portfolio</title>
-  <link rel="icon" href="favicon.png" type="image/png" />
-  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600&display=swap" rel="stylesheet" />
-
-  <style>
-    :root {
-      --carbon: #121212;
-      --carbon-deep: #0d0d0d;
-      --golden: #c9a74c;
-      --anthracite: #b3b3b3;
-      --white: #ffffff;
-      --transition: 0.3s ease-in-out;
-      --border-radius: 20px;
-    }
-
-    * { margin:0; padding:0; box-sizing:border-box; }
-
-    body {
-      font-family: 'Outfit', sans-serif;
-      background-color: var(--carbon);
-      color: var(--white);
-      -webkit-font-smoothing: antialiased;
-      overflow-x: hidden;
-    }
-
-    header {
-      backdrop-filter: blur(14px);
-      background: rgba(255 255 255 / 0.05);
-      padding: 1.3rem 2rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      position: sticky;
-      top: 0;
-      z-index: 1100;
-      box-shadow: 0 2px 25px rgba(0,0,0,0.85);
-    }
-
-    .logo { height:42px; filter: drop-shadow(0 0 1.5px rgba(0,0,0,0.6)); user-select:none; }
-
-    nav a {
-      position: relative;
-      color: var(--white);
-      text-decoration: none;
-      font-weight:600;
-      margin-left:2.5rem;
-      padding-bottom:4px;
-      font-size:1rem;
-      user-select:none;
-      transition: color var(--transition);
-      cursor:pointer;
-    }
-
-    nav a::after {
-      content: "";
-      position: absolute;
-      bottom:0;
-      left:0;
-      width:0;
-      height:3px;
-      background: linear-gradient(90deg, #008C45, #F4F5F0, #CD212A);
-      border-radius:3px 3px 0 0;
-      transition: width var(--transition);
-    }
-
-    nav a:hover::after,
-    nav a:focus-visible::after { width:100%; }
-
-    nav a:hover, nav a:focus-visible { color: var(--golden); outline:none; }
-
-    /* Hero */
-    .hero {
-      position: relative;
-      height:100vh;
-      background: url('porta-brandeburgo.jpg') center/cover no-repeat;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      text-align:center;
-      color:var(--white);
-      overflow:hidden;
-    }
-
-    .hero::after {
-      content:"";
-      position:absolute;
-      top:0; left:0;
-      width:100%; height:100%;
-      background: rgba(0,0,0,0.55);
-    }
-
-    .hero-content {
-      position:relative;
-      z-index:2;
-      max-width:700px;
-      opacity:0;
-      transform:translateY(30px);
-      transition: opacity 1.2s ease, transform 1.2s ease;
-    }
-
-    .hero-content.visible { opacity:1; transform:translateY(0); }
-
-    .hero-content h1 { font-size:3rem; color:var(--golden); margin-bottom:1rem; }
-    .hero-content p { font-size:1.2rem; color:var(--anthracite); margin-bottom:2rem; }
-
-    .btn-golden {
-      display:inline-block;
-      padding:0.85rem 2rem;
-      border:2px solid var(--golden);
-      border-radius:40px;
-      color:var(--golden);
-      text-decoration:none;
-      font-weight:600;
-      transition:all var(--transition);
-    }
-
-    .btn-golden:hover {
-      background:var(--golden);
-      color:var(--carbon);
-      box-shadow:0 8px 20px rgba(201,167,76,0.5);
-    }
-
-    main { max-width:1100px; margin:auto; padding:5rem 2rem; }
-    section { margin-bottom:5rem; }
-    h2.section-title { font-size:2.4rem; color:var(--golden); text-align:center; margin-bottom:2rem; }
-
-    .fade-up { opacity:0; transform:translateY(30px); transition: opacity 1.2s ease, transform 1.2s ease; }
-    .fade-up.visible { opacity:1; transform:translateY(0); }
-
-    /* Progetti uniformi */
-    .projects-grid {
-      display:grid;
-      grid-template-columns: repeat(auto-fit, minmax(320px,1fr));
-      gap:2.4rem;
-      align-items:start;
-    }
-
-    .project-card {
-      display:flex;
-      flex-direction:column;
-      justify-content:space-between;
-      background:var(--carbon-deep);
-      border-radius:20px;
-      overflow:hidden;
-      box-shadow:0 10px 40px rgba(0,0,0,0.5);
-      transition: transform var(--transition);
-      min-height: 380px;
-    }
-
-    .project-card:hover { transform: translateY(-5px); }
-
-    .project-card img { width:100%; display:block; object-fit:cover; height:200px; }
-    .project-info { padding:1.6rem; display:flex; flex-direction:column; flex:1; }
-
-    .project-info h3 { color:var(--golden); font-size:1.4rem; margin-bottom:0.8rem; }
-    .project-info p { color:var(--anthracite); font-size:1rem; line-height:1.6; margin-bottom:1.4rem; flex:1; }
-
-    /* About e CTA */
-    .about {
-      display:flex; flex-wrap:wrap; align-items:center; gap:2rem;
-      background:var(--carbon-deep); border-radius:20px;
-      padding:3rem; box-shadow:0 10px 40px rgba(0,0,0,0.4);
-    }
-    .about img { width:320px; border-radius:20px; }
-    .about-text { flex:1; }
-    .about-text h2 { color:var(--golden); margin-bottom:1rem; }
-    .about-text p { color:var(--anthracite); line-height:1.6; margin-bottom:1.5rem; }
-
-    .contact-cta {
-      text-align:center;
-      padding:4rem 2rem;
-      background: linear-gradient(180deg, rgba(201,167,76,0.05), rgba(0,0,0,0.8));
-      border-radius:20px;
-      box-shadow:0 5px 30px rgba(0,0,0,0.5);
-    }
-    .contact-cta h2 { color:var(--golden); margin-bottom:1rem; }
-    .contact-cta p { color:var(--anthracite); margin-bottom:2rem; }
-
-    footer {
-      background:var(--carbon-deep);
-      padding:3rem 2rem;
-      display:grid;
-      grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
-      gap:2rem;
-      border-top:1px solid rgba(255,255,255,0.05);
-    }
-    .footer-col h4 { color:var(--golden); margin-bottom:1rem; }
-    .footer-col ul { list-style:none; }
-    .footer-col ul li { margin:0.6rem 0; }
-    .footer-col ul li a { color:var(--anthracite); text-decoration:none; transition:var(--transition); }
-    .footer-col ul li a:hover { color:var(--white); }
-    .footer-bottom { grid-column:1 / -1; text-align:center; margin-top:2rem; font-size:0.9rem; color:var(--anthracite); }
-
-    @media(max-width:768px) {
-      .about { flex-direction:column; text-align:center; }
-      .about img { width:100%; max-width:400px; }
-      nav a { margin-left:1rem; }
-    }
-  </style>
-</head>
-<body>
-
-  <header>
-    <a href="index.html"><img src="favicon.png" alt="Logo miniutti.it" class="logo" /></a>
-    <nav>
-      <a href="index.html" aria-current="page">Home</a>
-      <a href="portfolio.html">Portfolio</a>
-      <a href="contatti.html">Contatti</a>
-    </nav>
-  </header>
-
-  <section class="hero">
-    <div class="hero-content fade-up">
-      <h1>Tobia Miniutti</h1>
-      <p>Fotografo e Videomaker | Bologna</p>
-      <a href="#portfolio" class="btn-golden">Scopri i miei lavori</a>
-    </div>
-  </section>
-
-  <main>
-    <section class="about fade-up">
-      <img src="assets/profile.jpg" alt="Tobia Miniutti">
-      <div class="about-text">
-        <h2>Chi sono</h2>
-        <p>Sono Tobia, fotografo e videomaker di Bologna.  
-        Creo contenuti visivi con stile cinematografico, precisione tecnica e una forte attenzione ai dettagli e alla luce.</p>
-      </div>
-    </section>
-
-    <section id="portfolio" class="fade-up">
-      <h2 class="section-title">I miei lavori</h2>
-      <div class="projects-grid">
-        <div class="project-card">
-          <img src="assets/project1.jpg" alt="Progetto 1">
-          <div class="project-info">
-            <h3>Progetto 1</h3>
-            <p>Descrizione accurata del progetto 1.</p>
-            <a href="https://tobia.me/portfolio" target="_blank" class="btn-golden">Visita il progetto</a>
-          </div>
-        </div>
-        <div class="project-card">
-          <img src="assets/project2.jpg" alt="Progetto 2">
-          <div class="project-info">
-            <h3>Progetto 2</h3>
-            <p>Descrizione accurata del progetto 2.</p>
-            <a href="https://tobia.me/portfolio" target="_blank" class="btn-golden">Visita il progetto</a>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="contact-cta fade-up">
-      <h2>Hai un progetto in mente?</h2>
-      <p>Parliamone — realizziamolo insieme.</p>
-      <a href="contatti.html" class="btn-golden">Contattami</a>
-    </section>
-  </main>
-
-  <footer>
-    <div class="footer-col">
-      <h4>Miniutti.it</h4>
-      <p>Portfolio ufficiale di Tobia Miniutti — progetti, idee e sviluppo.</p>
-    </div>
-    <div class="footer-col">
-      <h4>Link rapidi</h4>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="contatti.html">Contatti</a></li>
-      </ul>
-    </div>
-    <div class="footer-col">
-      <h4>Contatti</h4>
-      <ul>
-        <li><a href="mailto:info@tobia.me">Email: info@tobia.me</a></li>
-        <li><a href="tel:+393791128232">Tel: +39 379 112 8232</a></li>
-      </ul>
-    </div>
-    <div class="footer-bottom">© 2025 tobia.me — Tutti i diritti riservati</div>
-  </footer>
-
-  <script>
-    const faders = document.querySelectorAll('.fade-up, .hero-content');
-    const appearOptions = { threshold: 0.2, rootMargin: "0px 0px -50px 0px" };
-    const appearOnScroll = new IntersectionObserver((entries, observer) => {
-      entries.forEach(entry => {
-        if (!entry.isIntersecting) return;
-        entry.target.classList.add('visible');
-        observer.unobserve(entry.target);
-      });
-    }, appearOptions);
-    faders.forEach(fader => appearOnScroll.observe(fader));
-  </script>
-</body>
-</html>
+vattene.
