--- a/portfolio.html
+++ b/portfolio.html
@@ -102,21 +102,21 @@
   <section id="portfolio">
     <h2 class="section-title">I miei lavori</h2>
     <div class="projects-grid">
-      <div class="project-card"><img src="assets/project1.jpg" alt="Progetto 1">
+      <div class="project-card"><img src="progetto_1.png" alt="Progetto 1">
         <div class="project-info">
-          <h3>Progetto 1</h3>
-          <p>Descrizione accurata del progetto 1.</p>
-          <a href="https://miniutti.it/portfolio" target="_blank" class="btn-golden">Visita il progetto</a>
+          <h3>First car shooting</h3>
+          <p>Il mio primo shooting automobilistico ha come protagonista un’Aixam 721 Sport. Il proprietario, dopo aver apportato alcune modifiche estetiche al mezzo, mi ha chiesto di realizzare uno shooting dedicato: puoi guardare il video cliccando il tasto qui sotto.</p>
+          <a href="https://youtube.com/shorts/UdVv1yjxa_o" target="_blank" class="btn-golden">Visita il progetto</a>
         </div>
       </div>
-      <div class="project-card"><img src="assets/project2.jpg" alt="Progetto 2">
+      <div class="project-card"><img src="progetto_2.png" alt="Progetto 2">
         <div class="project-info">
           <h3>Progetto 2</h3>
           <p>Descrizione accurata del progetto 2.</p>
           <a href="https://miniutti.it/portfolio" target="_blank" class="btn-golden">Visita il progetto</a>
         </div>
       </div>
-      <div class="project-card"><img src="assets/project3.jpg" alt="Progetto 3">
+      <div class="project-card"><img src="progetto_3.png" alt="Progetto 3">
         <div class="project-info">
           <h3>Progetto 3</h3>
           <p>Descrizione accurata del progetto 3.</p>
