--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang="it">
+  
+  <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="c37c9760-3506-4b81-a2ec-fa0c3b1b5566"  type="text/javascript"></script>
+  
+  
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
