Swap project descriptions in portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -106,16 +106,16 @@
     <div class="projects-grid">
       <div class="project-card"><img src="progetto_1.png" alt="Progetto 1">
         <div class="project-info">
-          <h3>First car shooting</h3>
-          <p>Il mio primo shooting automobilistico ha come protagonista un’Aixam 721 Sport. Il proprietario, dopo aver apportato alcune modifiche estetiche al mezzo, mi ha chiesto di realizzare uno shooting dedicato: puoi guardare il video cliccando il tasto qui sotto.</p>
-          <a href="https://youtube.com/shorts/UdVv1yjxa_o" target="_blank" class="btn-golden">Visita il progetto</a>
+          <h3>Colli in Volo</h3>
+          <p>Descrizione accurata del progetto 2.</p>
+          <a href="https://miniutti.it/portfolio" target="_blank" class="btn-golden">Visita il progetto</a>
         </div>
       </div>
       <div class="project-card"><img src="progetto_2.png" alt="Progetto 2">
         <div class="project-info">
-          <h3>Progetto 2</h3>
-          <p>Descrizione accurata del progetto 2.</p>
-          <a href="https://miniutti.it/portfolio" target="_blank" class="btn-golden">Visita il progetto</a>
+          <h3>First car shooting</h3>
+          <p>Il mio primo shooting automobilistico ha come protagonista un’Aixam 721 Sport. Il proprietario, dopo aver apportato alcune modifiche estetiche al mezzo, mi ha chiesto di realizzare uno shooting dedicato: puoi guardare il video cliccando il tasto qui sotto.</p>
+          <a href="https://youtube.com/shorts/UdVv1yjxa_o" target="_blank" class="btn-golden">Visita il progetto</a>
         </div>
       </div>
       <div class="project-card"><img src="progetto_3.png" alt="Progetto 3">
