--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ silktideCookieBannerManager.updateCookieBannerConfig({
   <section class="hero">
     <div class="hero-content fade-up">
       <h1>Tobia Miniutti</h1>
-      <p>Fotografo e Videomaker | Bologna</p>
+      <p>am Fotografo e Videomaker | Bologna</p>
       <a href="#portfolio" class="btn-golden">Scopri i miei lavori</a>
     </div>
   </section>
@@ -337,7 +337,7 @@ silktideCookieBannerManager.updateCookieBannerConfig({
       <img src="assets/profile.jpg" alt="Tobia Miniutti">
       <div class="about-text">
         <h2>Chi sono</h2>
-        <p>Sono Tobia, fotografo e videomaker di Bologna.  
+        <p>Sono Tobia, amatore fotografo e videomaker di Bologna.  
         Creo contenuti visivi con stile cinematografico, precisione tecnica e una forte attenzione ai dettagli e alla luce.</p>
       </div>
     </section>
@@ -374,11 +374,12 @@ silktideCookieBannerManager.updateCookieBannerConfig({
   <footer>
     <div class="footer-col">
       <h4>Miniutti.it</h4>
-      <p>Portfolio ufficiale di Tobia Miniutti — progetti, idee e sviluppo.</p>
+      <p>Portfolio fotografico di Tobia Miniutti — progetti, idee e sviluppo.</p>
     </div>
     <div class="footer-col">
       <h4>Link rapidi</h4>
       <ul>
+        <li><a href="https://www.iniutti.it">Portolio</a></li>
         <li><a href="index.html">Home</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="contatti.html">Contatti</a></li>
