--- a/portfolio.html
+++ b/portfolio.html
@@ -104,7 +104,7 @@
   <section id="portfolio">
     <h2 class="section-title">I miei lavori</h2>
     <div class="projects-grid">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/GM1dVLFfNEg?si=lWUUeQSUrYaO3mx8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>        <div class="project-info">
+      <div class="project-card"><iframe width="560" height="315" src="https://www.youtube.com/embed/GM1dVLFfNEg?si=lWUUeQSUrYaO3mx8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>        <div class="project-info">
           <h3>Colli by Air</h3>
           <p>Descrizione accurata del progetto 2.</p>
           <a href="https://miniutti.it/portfolio" target="_blank" class="btn-golden">Visita il progetto</a>
