Revise project details for 'Colli by Air'
Updated project description and link for 'Colli by Air'.

--- a/portfolio.html
+++ b/portfolio.html
@@ -106,8 +106,10 @@
     <div class="projects-grid">
       <div class="project-card"><iframe width="560" height="315" src="https://www.youtube.com/embed/GM1dVLFfNEg?si=lWUUeQSUrYaO3mx8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>        <div class="project-info">
           <h3>Colli by Air</h3>
-          <p>Descrizione accurata del progetto 2.</p>
-          <a href="https://miniutti.it/portfolio" target="_blank" class="btn-golden">Visita il progetto</a>
+          <p>Riprese aeree sui colli di Bologna: strade panoramiche, colline e scorci sulla città visti dall’alto.
+Volo realizzato con DJI Air 3S, cercando movimenti fluidi e inquadrature pensate per valorizzare il paesaggio.
+</p>
+          <a href="https://youtu.be/GM1dVLFfNEg?si=lWUUeQSUrYaO3mx8o" target="_blank" class="btn-golden">Visita il progetto</a>
         </div>
       </div>
       <div class="project-card"><img src="progetto_2.png" alt="Progetto 2">
