Update contact email in footer

--- a/portfolio.html
+++ b/portfolio.html
@@ -146,7 +146,7 @@ Volo realizzato con DJI Air 3S, cercando movimenti fluidi e inquadrature pensate
   <div class="footer-col">
     <h4>Contatti</h4>
     <ul>
-      <li><a href="mailto:info@tobia.me">Email: info@tobia.me</a></li>
+      <li><a href="mailto:hello@tobia.me">Email: hello@tobia.me</a></li>
       <li><a href="tel:+393791128232">Tel: +39 379 112 8232</a></li>
     </ul>
   </div>
