--- a/contatti.html
+++ b/contatti.html
@@ -230,7 +230,7 @@
   <div class="footer-col">
     <h4>Contatti</h4>
     <ul>
-      <li><a href="mailto:info@tobia.me">Email: info@tobia.me</a></li>
+      <li><a href="mailto:hello@tobia.me">Email: hello@tobia.me</a></li>
       <li><a href="tel:+393791128232">Tel: +39 379 112 8232</a></li>
     </ul>
   </div>
