Update contact email address in contatti.html

--- a/contatti.html
+++ b/contatti.html
@@ -209,7 +209,7 @@
   </form>
 
   <section class="contact-info">
-    <p><strong>Email:</strong> <a href="mailto:tobia@miniutti.it">info@tobia.me</a></p>
+    <p><strong>Email:</strong> <a href="mailto:hello@miniutti.it">hello@tobia.me</a></p>
     <p><strong>Telefono:</strong> <a href="tel:+393791128232">+39 379 112 8232</a></p>
   </section>
 </main>
