Remove cookie consent manager and update text

--- a/index.html
+++ b/index.html
@@ -2,114 +2,6 @@
 <html lang="it">
   
 <head>
-
-
-<link rel="stylesheet" id="silktide-consent-manager-css" href="path-to-css/silktide-consent-manager.css">
-<script src="path-to-js/silktide-consent-manager.js"></script>
-<script>
-silktideCookieBannerManager.updateCookieBannerConfig({
-  background: {
-    showBackground: true
-  },
-  cookieIcon: {
-    position: "bottomLeft"
-  },
-  cookieTypes: [
-    {
-      id: "necessari",
-      name: "Necessari",
-      description: "<p>Questi cookie sono essenziali per il funzionamento del sito e non possono essere disattivati nei nostri sistemi.<br data-start=\"1313\" data-end=\"1316\">\nVengono impostati solo in risposta ad azioni da te compiute, come la gestione delle impostazioni sulla privacy, l’accesso o la compilazione di moduli.<br data-start=\"1466\" data-end=\"1469\">\n<span data-start=\"1469\" data-end=\"1488\">Base giuridica:</span> legittimo interesse (art. 6, par. 1, lett. f GDPR).</p>",
-      required: true,
-      onAccept: function() {
-        console.log('Add logic for the required Necessari here');
-      }
-    },
-    {
-      id: "analisi",
-      name: "Analisi",
-      description: "<p>Ci permettono di comprendere come gli utenti interagiscono con il sito, in modo anonimo e aggregato.<br data-start=\"1687\" data-end=\"1690\">\nUtilizziamo strumenti di analisi (Google Analytics) per migliorare contenuti e funzionalità.<br data-start=\"1806\" data-end=\"1809\">\n<span data-start=\"1809\" data-end=\"1828\">Base giuridica:</span> consenso (art. 6, par. 1, lett. a GDPR).</p>",
-      required: false,
-      onAccept: function() {
-        gtag('consent', 'update', {
-          analytics_storage: 'granted',
-        });
-        dataLayer.push({
-          'event': 'consent_accepted_analisi',
-        });
-      },
-      onReject: function() {
-        gtag('consent', 'update', {
-          analytics_storage: 'denied',
-        });
-      }
-    },
-    {
-      id: "preferenze",
-      name: "Preferenze",
-      description: "<p>Consentono al sito di ricordare le tue scelte (come lingua o area geografica) e offrire funzionalità personalizzate.<br data-start=\"2023\" data-end=\"2026\">\n<span data-start=\"2026\" data-end=\"2045\">Base giuridica:</span> consenso (art. 6, par. 1, lett. a GDPR).</p>",
-      required: false,
-      onAccept: function() {
-        gtag('consent', 'update', {
-          functionality_storage: 'granted',
-        });
-        dataLayer.push({
-          'event': 'consent_accepted_preferenze',
-        });
-      },
-      onReject: function() {
-        gtag('consent', 'update', {
-          functionality_storage: 'denied',
-        });
-      }
-    },
-    {
-      id: "marketing",
-      name: "Marketing",
-      description: "Questi cookie vengono utilizzati, previo tuo consenso, per mostrarti contenuti e annunci pertinenti ai tuoi interessi, anche su siti di terze parti.<br data-start=\"2284\" data-end=\"2287\">\nLe informazioni possono essere condivise con partner pubblicitari per creare un profilo basato sulle tue preferenze.<br data-start=\"2403\" data-end=\"2406\">\n<span data-start=\"2406\" data-end=\"2425\">Base giuridica:</span> consenso (art. 6, par. 1, lett. a GDPR).",
-      required: false,
-      onAccept: function() {
-        gtag('consent', 'update', {
-          ad_storage: 'granted',
-          ad_user_data: 'granted',
-          ad_personalization: 'granted',
-        });
-        dataLayer.push({
-          'event': 'consent_accepted_marketing',
-        });
-      },
-      onReject: function() {
-        gtag('consent', 'update', {
-          ad_storage: 'denied',
-          ad_user_data: 'denied',
-          ad_personalization: 'denied',
-        });
-      }
-    }
-  ],
-  text: {
-    banner: {
-      description: "<p>We use cookies on our site to enhance your user experience, provide personalized content, and analyze our traffic. <a href=\"https://your-website.com/cookie-policy\" target=\"_blank\">Cookie Policy.</a></p>",
-      acceptAllButtonText: "Accetta tutti",
-      acceptAllButtonAccessibleLabel: "Accetta tutti i cookie",
-      rejectNonEssentialButtonText: "Rifiuta non necessari",
-      rejectNonEssentialButtonAccessibleLabel: "Rifiuta i non necessari",
-      preferencesButtonText: "Preferenze",
-      preferencesButtonAccessibleLabel: "Preferenze"
-    },
-    preferences: {
-      title: "Gestisci le tue preferenze sui cookie ",
-      description: "<p>Puoi scegliere se consentire o meno determinati tipi di cookie. Le preferenze che imposti verranno applicate in modo coerente durante la tua navigazione sul nostro sito.</p>",
-      creditLinkText: "www.tobia.me",
-      creditLinkAccessibleLabel: "www.tobia.me"
-    }
-  },
-  position: {
-    banner: "bottomCenter"
-  }
-});
-</script>
-
-
   
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -327,7 +219,7 @@ silktideCookieBannerManager.updateCookieBannerConfig({
   <section class="hero">
     <div class="hero-content fade-up">
       <h1>Tobia Miniutti</h1>
-      <p>am Fotografo e Videomaker | Bologna</p>
+      <p>Videomaker | Bologna</p>
       <a href="#portfolio" class="btn-golden">Scopri i miei lavori</a>
     </div>
   </section>
@@ -337,10 +229,32 @@ silktideCookieBannerManager.updateCookieBannerConfig({
       <img src="assets/profile.jpg" alt="Tobia Miniutti">
       <div class="about-text">
         <h2>Chi sono</h2>
-        <p>Sono Tobia, amatore fotografo e videomaker di Bologna.  
-        Creo contenuti visivi con stile cinematografico, precisione tecnica e una forte attenzione ai dettagli e alla luce.</p>
+        <p>Sono Tobia, fotografo videomaker di Bologna.  
+        Offro servizi video professionali per privati, feste, eventi e realtà aziendali.
+
+        Ogni lavoro è seguito con attenzione in tutte le fasi: idea iniziale, riprese e montaggio finale.
+        Per me non conta solo il risultato visivo, ma anche il percorso: mantengo un contatto diretto con il cliente, ascolto le esigenze e costruisco un video coerente con lo stile e l’obiettivo richiesto.</p>
       </div>
     </section>
+
+    <section class="about fade-up">
+      <img src="assets/services.jpg" alt="Servizi video di Tobia Miniutti">
+      <div class="about-text">
+        <h2>Cosa offro</h2>
+        <p>Servizi video professionali per privati, feste, eventi e realtà aziendali.</p>
+
+        <ul>
+          <li>Riprese video da terra con attrezzatura professionale</li>
+          <li>Riprese aeree con drone DJI Air 3S</li>
+          <li>Video per feste private, cerimonie ed eventi</li>
+          <li>Contenuti video per attività, brand e aziende</li>
+          <li>Montaggio e post-produzione curata nei dettagli</li>
+          <li>Consegna in formato ottimizzato per social e web</li>
+          <li>Contatto diretto e supporto durante tutto il progetto</li>
+        </ul>
+      </div>
+    </section>
+
 
     <section id="portfolio" class="fade-up">
       <h2 class="section-title">I miei lavori</h2>
